package aeropuerto;

public class AeropuertoPrivado {
  
}
